--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "leaflet": "^1.5.1",
+    "leaflet-sidebar-v2": "^3.2.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-leaflet": "^2.4.0",
+    "react-leaflet-sidebarv2": "^0.6.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
