--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "firebase": "^7.1.0",
     "leaflet": "^1.5.1",
     "leaflet-sidebar-v2": "^3.2.1",
     "react": "^16.10.1",
