--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-dom": "^16.10.1",
     "react-leaflet": "^2.4.0",
     "react-leaflet-sidebarv2": "^0.6.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
